deploy: da1be5b93575af05e1b21b4ab66af30c304885a7

--- a/genindex.html
+++ b/genindex.html
@@ -26,14 +26,18 @@
     <nav data-toggle="wy-nav-shift" class="wy-nav-side">
       <div class="wy-side-scroll">
         <div class="wy-side-nav-search" >
-            <a href="index.html" class="icon icon-home"> ChemCache
+
+          
+          
+          <a href="index.html" class="icon icon-home">
+            ChemCache
           </a>
               <div class="version">
                 1.0.0
               </div>
 <div role="search">
   <form id="rtd-search-form" class="wy-form" action="search.html" method="get">
-    <input type="text" name="q" placeholder="Search docs" />
+    <input type="text" name="q" placeholder="Search docs" aria-label="Search docs" />
     <input type="hidden" name="check_keywords" value="yes" />
     <input type="hidden" name="area" value="default" />
   </form>
@@ -58,7 +62,7 @@
         <div class="rst-content">
           <div role="navigation" aria-label="Page navigation">
   <ul class="wy-breadcrumbs">
-      <li><a href="index.html" class="icon icon-home"></a></li>
+      <li><a href="index.html" class="icon icon-home" aria-label="Home"></a></li>
       <li class="breadcrumb-item active">Index</li>
       <li class="wy-breadcrumbs-aside">
       </li>
@@ -94,14 +98,18 @@
 </li>
       <li><a href="python_api/reference_data/reference_data.scrape_bse.html#reference_data.scrape_bse.BSEBasisSetScraper.add_filter">add_filter() (reference_data.scrape_bse.BSEBasisSetScraper method)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="python_api/reference_data/reference_data.generate_atomicinfo.html#reference_data.generate_atomicinfo.AtomicData.add_isotope">add_isotope() (reference_data.generate_atomicinfo.AtomicData method)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="python_api/reference_data/reference_data.generate_basis.html#reference_data.generate_basis.Shell.add_prim">add_prim() (reference_data.generate_basis.Shell method)</a>
 </li>
       <li><a href="python_api/reference_data/reference_data.generate_atomicinfo.html#reference_data.generate_atomicinfo.AtomicData">AtomicData (class in reference_data.generate_atomicinfo)</a>
+
+      <ul>
+        <li><a href="python_api/reference_data/reference_data.generate_ptable_configs.html#reference_data.generate_ptable_configs.AtomicData">(class in reference_data.generate_ptable_configs)</a>
 </li>
+      </ul></li>
   </ul></td>
 </tr></table>
 
@@ -115,6 +123,12 @@
 
 <h2 id="C">C</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="python_api/reference_data/reference_data.generate_ptable_configs.html#reference_data.generate_ptable_configs.AtomicData.config">config (reference_data.generate_ptable_configs.AtomicData property)</a>
+</li>
+      <li><a href="python_api/reference_data/reference_data.generate_ptable_configs.html#reference_data.generate_ptable_configs.AtomicData.config_full">config_full (reference_data.generate_ptable_configs.AtomicData property)</a>
+</li>
+  </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="python_api/reference_data/reference_data.generate_basis.html#reference_data.generate_basis.Shell.cxxify">cxxify() (reference_data.generate_basis.Shell method)</a>
 
@@ -181,6 +195,8 @@
 </li>
         <li><a href="python_api/reference_data/reference_data.generate_molecules.html#reference_data.generate_molecules.main">(in module reference_data.generate_molecules)</a>
 </li>
+        <li><a href="python_api/reference_data/reference_data.generate_ptable_configs.html#reference_data.generate_ptable_configs.main">(in module reference_data.generate_ptable_configs)</a>
+</li>
         <li><a href="python_api/reference_data/reference_data.scrape_bse.html#reference_data.scrape_bse.main">(in module reference_data.scrape_bse)</a>
 </li>
       </ul></li>
@@ -197,6 +213,8 @@
         <li><a href="python_api/reference_data/reference_data.generate_densities.html#module-reference_data.generate_densities">reference_data.generate_densities</a>
 </li>
         <li><a href="python_api/reference_data/reference_data.generate_molecules.html#module-reference_data.generate_molecules">reference_data.generate_molecules</a>
+</li>
+        <li><a href="python_api/reference_data/reference_data.generate_ptable_configs.html#module-reference_data.generate_ptable_configs">reference_data.generate_ptable_configs</a>
 </li>
         <li><a href="python_api/reference_data/reference_data.helper_fxns.html#module-reference_data.helper_fxns">reference_data.helper_fxns</a>
 </li>
@@ -222,13 +240,23 @@
 </li>
         <li><a href="python_api/reference_data/reference_data.generate_molecules.html#reference_data.generate_molecules.parse_args">(in module reference_data.generate_molecules)</a>
 </li>
+        <li><a href="python_api/reference_data/reference_data.generate_ptable_configs.html#reference_data.generate_ptable_configs.parse_args">(in module reference_data.generate_ptable_configs)</a>
+</li>
         <li><a href="python_api/reference_data/reference_data.scrape_bse.html#reference_data.scrape_bse.parse_args">(in module reference_data.scrape_bse)</a>
 </li>
       </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="python_api/reference_data/reference_data.generate_atomicinfo.html#reference_data.generate_atomicinfo.parse_symbols">parse_symbols() (in module reference_data.generate_atomicinfo)</a>
+      <li><a href="python_api/reference_data/reference_data.generate_ptable_configs.html#reference_data.generate_ptable_configs.parse_config_str">parse_config_str() (in module reference_data.generate_ptable_configs)</a>
 </li>
+      <li><a href="python_api/reference_data/reference_data.generate_ptable_configs.html#reference_data.generate_ptable_configs.parse_nist_configs">parse_nist_configs() (in module reference_data.generate_ptable_configs)</a>
+</li>
+      <li><a href="python_api/reference_data/reference_data.generate_atomicinfo.html#reference_data.generate_atomicinfo.parse_symbols">parse_symbols() (in module reference_data.generate_atomicinfo)</a>
+
+      <ul>
+        <li><a href="python_api/reference_data/reference_data.generate_ptable_configs.html#reference_data.generate_ptable_configs.parse_symbols">(in module reference_data.generate_ptable_configs)</a>
+</li>
+      </ul></li>
   </ul></td>
 </tr></table>
 
@@ -270,6 +298,13 @@
 
       <ul>
         <li><a href="python_api/reference_data/reference_data.generate_molecules.html#module-reference_data.generate_molecules">module</a>
+</li>
+      </ul></li>
+      <li>
+    reference_data.generate_ptable_configs
+
+      <ul>
+        <li><a href="python_api/reference_data/reference_data.generate_ptable_configs.html#module-reference_data.generate_ptable_configs">module</a>
 </li>
       </ul></li>
       <li>
