deploy: 499d4fd6f618fe2281daaad1e6ce53d93206ec63

--- a/python_api/reference_data/reference_data.generate_densities.html
+++ b/python_api/reference_data/reference_data.generate_densities.html
@@ -116,7 +116,7 @@ be present before running it.</p>
 <span class="o">|</span>       <span class="n">nwx_atomic_densities</span><span class="o">.</span><span class="n">hpp</span>
 <span class="o">|</span>
 <span class="o">+---</span><span class="n">src</span>
-<span class="o">|</span>   \<span class="o">---</span><span class="n">atomic_densities</span>
+<span class="o">|</span>   \<span class="o">---</span><span class="n">atomic_densities</span> <span class="p">(</span><span class="n">this</span> <span class="n">directory</span> <span class="n">must</span> <span class="n">be</span> <span class="n">made</span> <span class="n">manually</span> <span class="n">before</span> <span class="n">run</span> <span class="n">this</span> <span class="n">python</span> <span class="n">script</span><span class="p">)</span>
 <span class="o">|</span>           <span class="n">add_density</span><span class="o">.</span><span class="n">cmake</span>
 <span class="o">|</span>           <span class="o">&lt;</span><span class="n">all_basis_set_files</span><span class="o">&gt;</span>
 <span class="o">|</span>       <span class="n">nwx_atomic_densities</span><span class="o">.</span><span class="n">cpp</span>
