--- a/genindex.html
+++ b/genindex.html
@@ -195,6 +195,8 @@
 </li>
         <li><a href="python_api/reference_data/reference_data.generate_molecules.html#reference_data.generate_molecules.main">(in module reference_data.generate_molecules)</a>
 </li>
+        <li><a href="python_api/reference_data/reference_data.generate_ptable_atomdm.html#reference_data.generate_ptable_atomdm.main">(in module reference_data.generate_ptable_atomdm)</a>
+</li>
         <li><a href="python_api/reference_data/reference_data.generate_ptable_configs.html#reference_data.generate_ptable_configs.main">(in module reference_data.generate_ptable_configs)</a>
 </li>
         <li><a href="python_api/reference_data/reference_data.scrape_bse.html#reference_data.scrape_bse.main">(in module reference_data.scrape_bse)</a>
@@ -213,6 +215,8 @@
         <li><a href="python_api/reference_data/reference_data.generate_densities.html#module-reference_data.generate_densities">reference_data.generate_densities</a>
 </li>
         <li><a href="python_api/reference_data/reference_data.generate_molecules.html#module-reference_data.generate_molecules">reference_data.generate_molecules</a>
+</li>
+        <li><a href="python_api/reference_data/reference_data.generate_ptable_atomdm.html#module-reference_data.generate_ptable_atomdm">reference_data.generate_ptable_atomdm</a>
 </li>
         <li><a href="python_api/reference_data/reference_data.generate_ptable_configs.html#module-reference_data.generate_ptable_configs">reference_data.generate_ptable_configs</a>
 </li>
@@ -239,6 +243,8 @@
         <li><a href="python_api/reference_data/reference_data.generate_densities.html#reference_data.generate_densities.parse_args">(in module reference_data.generate_densities)</a>
 </li>
         <li><a href="python_api/reference_data/reference_data.generate_molecules.html#reference_data.generate_molecules.parse_args">(in module reference_data.generate_molecules)</a>
+</li>
+        <li><a href="python_api/reference_data/reference_data.generate_ptable_atomdm.html#reference_data.generate_ptable_atomdm.parse_args">(in module reference_data.generate_ptable_atomdm)</a>
 </li>
         <li><a href="python_api/reference_data/reference_data.generate_ptable_configs.html#reference_data.generate_ptable_configs.parse_args">(in module reference_data.generate_ptable_configs)</a>
 </li>
@@ -291,13 +297,20 @@
         <li><a href="python_api/reference_data/reference_data.generate_densities.html#module-reference_data.generate_densities">module</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     reference_data.generate_molecules
 
       <ul>
         <li><a href="python_api/reference_data/reference_data.generate_molecules.html#module-reference_data.generate_molecules">module</a>
+</li>
+      </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li>
+    reference_data.generate_ptable_atomdm
+
+      <ul>
+        <li><a href="python_api/reference_data/reference_data.generate_ptable_atomdm.html#module-reference_data.generate_ptable_atomdm">module</a>
 </li>
       </ul></li>
       <li>
