--- a/genindex.html
+++ b/genindex.html
@@ -107,7 +107,7 @@
       <li><a href="python_api/reference_data/reference_data.generate_atomicinfo.html#reference_data.generate_atomicinfo.AtomicData">AtomicData (class in reference_data.generate_atomicinfo)</a>
 
       <ul>
-        <li><a href="python_api/reference_data/reference_data.generate_ptable_configs.html#reference_data.generate_ptable_configs.AtomicData">(class in reference_data.generate_ptable_configs)</a>
+        <li><a href="python_api/reference_data/reference_data.generate_elec_configs.html#reference_data.generate_elec_configs.AtomicData">(class in reference_data.generate_elec_configs)</a>
 </li>
       </ul></li>
   </ul></td>
@@ -124,9 +124,9 @@
 <h2 id="C">C</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="python_api/reference_data/reference_data.generate_ptable_configs.html#reference_data.generate_ptable_configs.AtomicData.config">config (reference_data.generate_ptable_configs.AtomicData property)</a>
+      <li><a href="python_api/reference_data/reference_data.generate_elec_configs.html#reference_data.generate_elec_configs.AtomicData.config">config (reference_data.generate_elec_configs.AtomicData property)</a>
 </li>
-      <li><a href="python_api/reference_data/reference_data.generate_ptable_configs.html#reference_data.generate_ptable_configs.AtomicData.config_full">config_full (reference_data.generate_ptable_configs.AtomicData property)</a>
+      <li><a href="python_api/reference_data/reference_data.generate_elec_configs.html#reference_data.generate_elec_configs.AtomicData.config_full">config_full (reference_data.generate_elec_configs.AtomicData property)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
@@ -193,11 +193,9 @@
 </li>
         <li><a href="python_api/reference_data/reference_data.generate_densities.html#reference_data.generate_densities.main">(in module reference_data.generate_densities)</a>
 </li>
+        <li><a href="python_api/reference_data/reference_data.generate_elec_configs.html#reference_data.generate_elec_configs.main">(in module reference_data.generate_elec_configs)</a>
+</li>
         <li><a href="python_api/reference_data/reference_data.generate_molecules.html#reference_data.generate_molecules.main">(in module reference_data.generate_molecules)</a>
-</li>
-        <li><a href="python_api/reference_data/reference_data.generate_ptable_atomdm.html#reference_data.generate_ptable_atomdm.main">(in module reference_data.generate_ptable_atomdm)</a>
-</li>
-        <li><a href="python_api/reference_data/reference_data.generate_ptable_configs.html#reference_data.generate_ptable_configs.main">(in module reference_data.generate_ptable_configs)</a>
 </li>
         <li><a href="python_api/reference_data/reference_data.scrape_bse.html#reference_data.scrape_bse.main">(in module reference_data.scrape_bse)</a>
 </li>
@@ -214,11 +212,9 @@
 </li>
         <li><a href="python_api/reference_data/reference_data.generate_densities.html#module-reference_data.generate_densities">reference_data.generate_densities</a>
 </li>
+        <li><a href="python_api/reference_data/reference_data.generate_elec_configs.html#module-reference_data.generate_elec_configs">reference_data.generate_elec_configs</a>
+</li>
         <li><a href="python_api/reference_data/reference_data.generate_molecules.html#module-reference_data.generate_molecules">reference_data.generate_molecules</a>
-</li>
-        <li><a href="python_api/reference_data/reference_data.generate_ptable_atomdm.html#module-reference_data.generate_ptable_atomdm">reference_data.generate_ptable_atomdm</a>
-</li>
-        <li><a href="python_api/reference_data/reference_data.generate_ptable_configs.html#module-reference_data.generate_ptable_configs">reference_data.generate_ptable_configs</a>
 </li>
         <li><a href="python_api/reference_data/reference_data.helper_fxns.html#module-reference_data.helper_fxns">reference_data.helper_fxns</a>
 </li>
@@ -242,25 +238,23 @@
 </li>
         <li><a href="python_api/reference_data/reference_data.generate_densities.html#reference_data.generate_densities.parse_args">(in module reference_data.generate_densities)</a>
 </li>
+        <li><a href="python_api/reference_data/reference_data.generate_elec_configs.html#reference_data.generate_elec_configs.parse_args">(in module reference_data.generate_elec_configs)</a>
+</li>
         <li><a href="python_api/reference_data/reference_data.generate_molecules.html#reference_data.generate_molecules.parse_args">(in module reference_data.generate_molecules)</a>
-</li>
-        <li><a href="python_api/reference_data/reference_data.generate_ptable_atomdm.html#reference_data.generate_ptable_atomdm.parse_args">(in module reference_data.generate_ptable_atomdm)</a>
-</li>
-        <li><a href="python_api/reference_data/reference_data.generate_ptable_configs.html#reference_data.generate_ptable_configs.parse_args">(in module reference_data.generate_ptable_configs)</a>
 </li>
         <li><a href="python_api/reference_data/reference_data.scrape_bse.html#reference_data.scrape_bse.parse_args">(in module reference_data.scrape_bse)</a>
 </li>
       </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="python_api/reference_data/reference_data.generate_ptable_configs.html#reference_data.generate_ptable_configs.parse_config_str">parse_config_str() (in module reference_data.generate_ptable_configs)</a>
+      <li><a href="python_api/reference_data/reference_data.generate_elec_configs.html#reference_data.generate_elec_configs.parse_config_str">parse_config_str() (in module reference_data.generate_elec_configs)</a>
 </li>
-      <li><a href="python_api/reference_data/reference_data.generate_ptable_configs.html#reference_data.generate_ptable_configs.parse_nist_configs">parse_nist_configs() (in module reference_data.generate_ptable_configs)</a>
+      <li><a href="python_api/reference_data/reference_data.generate_elec_configs.html#reference_data.generate_elec_configs.parse_nist_configs">parse_nist_configs() (in module reference_data.generate_elec_configs)</a>
 </li>
       <li><a href="python_api/reference_data/reference_data.generate_atomicinfo.html#reference_data.generate_atomicinfo.parse_symbols">parse_symbols() (in module reference_data.generate_atomicinfo)</a>
 
       <ul>
-        <li><a href="python_api/reference_data/reference_data.generate_ptable_configs.html#reference_data.generate_ptable_configs.parse_symbols">(in module reference_data.generate_ptable_configs)</a>
+        <li><a href="python_api/reference_data/reference_data.generate_elec_configs.html#reference_data.generate_elec_configs.parse_symbols">(in module reference_data.generate_elec_configs)</a>
 </li>
       </ul></li>
   </ul></td>
@@ -297,27 +291,20 @@
         <li><a href="python_api/reference_data/reference_data.generate_densities.html#module-reference_data.generate_densities">module</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li>
+    reference_data.generate_elec_configs
+
+      <ul>
+        <li><a href="python_api/reference_data/reference_data.generate_elec_configs.html#module-reference_data.generate_elec_configs">module</a>
+</li>
+      </ul></li>
       <li>
     reference_data.generate_molecules
 
       <ul>
         <li><a href="python_api/reference_data/reference_data.generate_molecules.html#module-reference_data.generate_molecules">module</a>
-</li>
-      </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li>
-    reference_data.generate_ptable_atomdm
-
-      <ul>
-        <li><a href="python_api/reference_data/reference_data.generate_ptable_atomdm.html#module-reference_data.generate_ptable_atomdm">module</a>
-</li>
-      </ul></li>
-      <li>
-    reference_data.generate_ptable_configs
-
-      <ul>
-        <li><a href="python_api/reference_data/reference_data.generate_ptable_configs.html#module-reference_data.generate_ptable_configs">module</a>
 </li>
       </ul></li>
       <li>
