deploy: 7df50442c404f8d5092c0ce79fc998e2e2d215d7

--- a/genindex.html
+++ b/genindex.html
@@ -200,6 +200,8 @@
         <li><a href="python_api/reference_data/reference_data.scrape_bse.html#reference_data.scrape_bse.main">(in module reference_data.scrape_bse)</a>
 </li>
       </ul></li>
+      <li><a href="python_api/reference_data/reference_data.generate_densities.html#reference_data.generate_densities.make_square_arr">make_square_arr() (in module reference_data.generate_densities)</a>
+</li>
       <li>
     module
 
