deploy: 5ebda45d26b92d76267a784ee49126028fe103b4

--- a/module_api/sto-3g.html
+++ b/module_api/sto-3g.html
@@ -197,9 +197,9 @@ the Module class’s advanced API.</p>
 </div>
 <table class="docutils align-default">
 <colgroup>
-<col style="width: 26%" />
-<col style="width: 35%" />
-<col style="width: 39%" />
+<col style="width: 9%" />
+<col style="width: 77%" />
+<col style="width: 14%" />
 </colgroup>
 <thead>
 <tr class="row-odd"><th class="head"><p>Key</p></th>
@@ -209,7 +209,7 @@ the Module class’s advanced API.</p>
 </thead>
 <tbody>
 <tr class="row-even"><td><p>Molecular Basis Set</p></td>
-<td><p>chemist::AOBasisSet&lt;double&gt;</p></td>
+<td><p>chemist::basis_set::AOBasisSet&lt;chemist::basis_set::AtomicBasisSet&lt;chemist::basis_set::Shell&lt;chemist::basis_set::ContractedGaussian&lt;chemist::basis_set::Primitive&lt;double&gt;&gt;&gt;&gt;&gt;</p></td>
 <td><p>The basis set for the molecule</p></td>
 </tr>
 </tbody>
