--- a/module_api/sto-3g_atomic_basis.html
+++ b/module_api/sto-3g_atomic_basis.html
@@ -197,9 +197,9 @@ the Module class’s advanced API.</p>
 </div>
 <table class="docutils align-default">
 <colgroup>
-<col style="width: 23%" />
-<col style="width: 42%" />
-<col style="width: 35%" />
+<col style="width: 10%" />
+<col style="width: 76%" />
+<col style="width: 15%" />
 </colgroup>
 <thead>
 <tr class="row-odd"><th class="head"><p>Key</p></th>
@@ -209,7 +209,7 @@ the Module class’s advanced API.</p>
 </thead>
 <tbody>
 <tr class="row-even"><td><p>Atomic Basis Set</p></td>
-<td><p>chemist::AtomicBasisSet&lt;double&gt;</p></td>
+<td><p>chemist::basis_set::AtomicBasisSet&lt;chemist::basis_set::Shell&lt;chemist::basis_set::ContractedGaussian&lt;chemist::basis_set::Primitive&lt;double&gt;&gt;&gt;&gt;</p></td>
 <td><p>The basis set for the atom</p></td>
 </tr>
 </tbody>
