deploy: 94ec697cf2f57ff6cc37c730907678a55f5420fd

--- a/module_api/NWX_Molecules.html
+++ b/module_api/NWX_Molecules.html
@@ -230,7 +230,7 @@ submodule we have listed:</p>
 </thead>
 <tbody>
 <tr class="row-even"><td><p>Atoms</p></td>
-<td><p>simde::Atom&lt;unsigned long&gt;</p></td>
+<td><p>simde::Atom&lt;unsigned int&gt;</p></td>
 <td><p>N/A</p></td>
 </tr>
 </tbody>
