--- a/module_api/Symbol_from_Z.html
+++ b/module_api/Symbol_from_Z.html
@@ -178,7 +178,7 @@ subsection we list:</p>
 <li><p>Opaque? : True</p></li>
 <li><p>Domain Restrictions :</p>
 <ul>
-<li><p>Type == unsigned long</p></li>
+<li><p>Type == unsigned int</p></li>
 </ul>
 </li>
 </ul>
