--- a/module_api/Z_from_Symbol.html
+++ b/module_api/Z_from_Symbol.html
@@ -200,7 +200,7 @@ the Module class’s advanced API.</p>
 </thead>
 <tbody>
 <tr class="row-even"><td><p>Z</p></td>
-<td><p>unsigned long</p></td>
+<td><p>unsigned int</p></td>
 <td><p>Atomic Number</p></td>
 </tr>
 </tbody>
