--- a/module_api/sto-3g.html
+++ b/module_api/sto-3g.html
@@ -230,7 +230,7 @@ submodule we have listed:</p>
 </thead>
 <tbody>
 <tr class="row-even"><td><p>Atomic Basis</p></td>
-<td><p>simde::AtomicBasisSet&lt;unsigned long&gt;</p></td>
+<td><p>simde::AtomicBasisSet&lt;unsigned int&gt;</p></td>
 <td><p>N/A</p></td>
 </tr>
 </tbody>
