deploy: c909a255a37e2cb3d7c4d46821f1614fb747caf4

--- a/genindex.html
+++ b/genindex.html
@@ -89,6 +89,7 @@
  | <a href="#B"><strong>B</strong></a>
  | <a href="#C"><strong>C</strong></a>
  | <a href="#D"><strong>D</strong></a>
+ | <a href="#E"><strong>E</strong></a>
  | <a href="#F"><strong>F</strong></a>
  | <a href="#G"><strong>G</strong></a>
  | <a href="#I"><strong>I</strong></a>
@@ -99,6 +100,7 @@
  | <a href="#S"><strong>S</strong></a>
  | <a href="#V"><strong>V</strong></a>
  | <a href="#W"><strong>W</strong></a>
+ | <a href="#Z"><strong>Z</strong></a>
  
 </div>
 <h2 id="_">_</h2>
@@ -180,11 +182,17 @@
         <li><a href="autoapi/data_management/generate_elec_configs/index.html#data_management.generate_elec_configs.AtomicData">(class in data_management.generate_elec_configs)</a>
 </li>
       </ul></li>
+      <li><a href="autoapi/data_management/generate_molecules/index.html#data_management.generate_molecules.Molecule.atoms">atoms (data_management.generate_molecules.Molecule attribute)</a>
+</li>
   </ul></td>
 </tr></table>
 
 <h2 id="B">B</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="autoapi/data_management/scrape_bse/index.html#data_management.scrape_bse.BSEBasisSetScraper.base_url">base_url (data_management.scrape_bse.BSEBasisSetScraper attribute)</a>
+</li>
+  </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="autoapi/data_management/scrape_bse/index.html#data_management.scrape_bse.BSEBasisSetScraper">BSEBasisSetScraper (class in data_management.scrape_bse)</a>
 </li>
@@ -194,12 +202,20 @@
 <h2 id="C">C</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="autoapi/data_management/generate_elec_configs/index.html#data_management.generate_elec_configs.AtomicData.config">config (data_management.generate_elec_configs.AtomicData property)</a>
+      <li><a href="autoapi/data_management/generate_molecules/index.html#data_management.generate_molecules.Molecule.carts">carts (data_management.generate_molecules.Molecule attribute)</a>
 </li>
-      <li><a href="autoapi/data_management/generate_elec_configs/index.html#data_management.generate_elec_configs.AtomicData.config_full">config_full (data_management.generate_elec_configs.AtomicData property)</a>
+      <li><a href="autoapi/data_management/generate_basis/index.html#data_management.generate_basis.Shell.coefs">coefs (data_management.generate_basis.Shell attribute)</a>
+</li>
+      <li><a href="autoapi/data_management/generate_elec_configs/index.html#data_management.generate_elec_configs.AtomicData.confdict">confdict (data_management.generate_elec_configs.AtomicData attribute)</a>
+</li>
+      <li><a href="autoapi/data_management/generate_elec_configs/index.html#data_management.generate_elec_configs.AtomicData.config">config (data_management.generate_elec_configs.AtomicData property)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="autoapi/data_management/generate_elec_configs/index.html#data_management.generate_elec_configs.AtomicData.config_full">config_full (data_management.generate_elec_configs.AtomicData property)</a>
+</li>
+      <li><a href="autoapi/data_management/generate_elec_configs/index.html#data_management.generate_elec_configs.AtomicData.confstr">confstr (data_management.generate_elec_configs.AtomicData attribute)</a>
+</li>
       <li><a href="autoapi/data_management/generate_basis/index.html#data_management.generate_basis.Shell.cxxify">cxxify() (data_management.generate_basis.Shell method)</a>
 
       <ul>
@@ -247,8 +263,6 @@
         <li><a href="autoapi/data_management/generate_elec_configs/index.html#module-data_management.generate_elec_configs">module</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     data_management.generate_molecules
 
@@ -263,6 +277,8 @@
         <li><a href="autoapi/data_management/helper_fxns/index.html#module-data_management.helper_fxns">module</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     data_management.scrape_bse
 
@@ -270,6 +286,18 @@
         <li><a href="autoapi/data_management/scrape_bse/index.html#module-data_management.scrape_bse">module</a>
 </li>
       </ul></li>
+      <li><a href="autoapi/data_management/scrape_bse/index.html#data_management.scrape_bse.BSEBasisSetScraper.default_header_toggle">default_header_toggle (data_management.scrape_bse.BSEBasisSetScraper attribute)</a>
+</li>
+      <li><a href="autoapi/data_management/scrape_bse/index.html#data_management.scrape_bse.BSEBasisSetScraper.default_make_general">default_make_general (data_management.scrape_bse.BSEBasisSetScraper attribute)</a>
+</li>
+      <li><a href="autoapi/data_management/scrape_bse/index.html#data_management.scrape_bse.BSEBasisSetScraper.default_optimize_general">default_optimize_general (data_management.scrape_bse.BSEBasisSetScraper attribute)</a>
+</li>
+      <li><a href="autoapi/data_management/scrape_bse/index.html#data_management.scrape_bse.BSEBasisSetScraper.default_uncontract_general">default_uncontract_general (data_management.scrape_bse.BSEBasisSetScraper attribute)</a>
+</li>
+      <li><a href="autoapi/data_management/scrape_bse/index.html#data_management.scrape_bse.BSEBasisSetScraper.default_uncontract_segmented">default_uncontract_segmented (data_management.scrape_bse.BSEBasisSetScraper attribute)</a>
+</li>
+      <li><a href="autoapi/data_management/scrape_bse/index.html#data_management.scrape_bse.BSEBasisSetScraper.default_uncontract_spdf">default_uncontract_spdf (data_management.scrape_bse.BSEBasisSetScraper attribute)</a>
+</li>
       <li><a href="autoapi/data_management/helper_fxns/index.html#data_management.helper_fxns.desanitize_basis_name">desanitize_basis_name() (in module data_management.helper_fxns)</a>
 </li>
       <li><a href="autoapi/data_management/scrape_bse/index.html#data_management.scrape_bse.BSEBasisSetScraper.download_basis_set">download_basis_set() (data_management.scrape_bse.BSEBasisSetScraper method)</a>
@@ -281,9 +309,25 @@
   </ul></td>
 </tr></table>
 
+<h2 id="E">E</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="autoapi/data_management/generate_basis/index.html#data_management.generate_basis.Shell.exp">exp (data_management.generate_basis.Shell attribute)</a>
+</li>
+  </ul></td>
+</tr></table>
+
 <h2 id="F">F</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="autoapi/data_management/scrape_bse/index.html#data_management.scrape_bse.BSEBasisSetScraper.filtered_basis_sets">filtered_basis_sets (data_management.scrape_bse.BSEBasisSetScraper attribute)</a>
+</li>
+      <li><a href="autoapi/data_management/scrape_bse/index.html#data_management.scrape_bse.BSEBasisSetScraper.filtered_metadata">filtered_metadata (data_management.scrape_bse.BSEBasisSetScraper attribute)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="autoapi/data_management/scrape_bse/index.html#data_management.scrape_bse.BSEBasisSetScraper.filters">filters (data_management.scrape_bse.BSEBasisSetScraper attribute)</a>
+</li>
       <li><a href="autoapi/data_management/helper_fxns/index.html#data_management.helper_fxns.find_files">find_files() (in module data_management.helper_fxns)</a>
 </li>
   </ul></td>
@@ -292,10 +336,12 @@
 <h2 id="G">G</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="autoapi/data_management/scrape_bse/index.html#data_management.scrape_bse.BSEBasisSetScraper.get_extension">get_extension() (data_management.scrape_bse.BSEBasisSetScraper method)</a>
+      <li><a href="autoapi/data_management/generate_basis/index.html#data_management.generate_basis.Shell.gen">gen (data_management.generate_basis.Shell attribute)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="autoapi/data_management/scrape_bse/index.html#data_management.scrape_bse.BSEBasisSetScraper.get_extension">get_extension() (data_management.scrape_bse.BSEBasisSetScraper method)</a>
+</li>
       <li><a href="autoapi/data_management/scrape_bse/index.html#data_management.scrape_bse.BSEBasisSetScraper.get_filtered_basis_sets">get_filtered_basis_sets() (data_management.scrape_bse.BSEBasisSetScraper method)</a>
 </li>
   </ul></td>
@@ -307,6 +353,12 @@
       <li><a href="autoapi/data_management/generate_elec_configs/index.html#data_management.generate_elec_configs.i_to_lchar">i_to_lchar (in module data_management.generate_elec_configs)</a>
 </li>
   </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="autoapi/data_management/generate_atomicinfo/index.html#data_management.generate_atomicinfo.AtomicData.isotope_masses">isotope_masses (data_management.generate_atomicinfo.AtomicData attribute)</a>
+</li>
+      <li><a href="autoapi/data_management/generate_atomicinfo/index.html#data_management.generate_atomicinfo.AtomicData.isotopes">isotopes (data_management.generate_atomicinfo.AtomicData attribute)</a>
+</li>
+  </ul></td>
 </tr></table>
 
 <h2 id="L">L</h2>
@@ -314,11 +366,13 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="autoapi/data_management/generate_elec_configs/index.html#data_management.generate_elec_configs.lchar_to_i">lchar_to_i (in module data_management.generate_elec_configs)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="autoapi/data_management/generate_elec_configs/index.html#data_management.generate_elec_configs.LMAX">LMAX (in module data_management.generate_elec_configs)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="autoapi/data_management/helper_fxns/index.html#data_management.helper_fxns.lookup_extension">lookup_extension() (in module data_management.helper_fxns)</a>
+</li>
+      <li><a href="autoapi/data_management/generate_basis/index.html#data_management.generate_basis.Shell.ls">ls (data_management.generate_basis.Shell attribute)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -341,6 +395,8 @@
 </li>
       </ul></li>
       <li><a href="autoapi/data_management/generate_densities/index.html#data_management.generate_densities.make_square_arr">make_square_arr() (in module data_management.generate_densities)</a>
+</li>
+      <li><a href="autoapi/data_management/generate_atomicinfo/index.html#data_management.generate_atomicinfo.AtomicData.mass">mass (data_management.generate_atomicinfo.AtomicData attribute)</a>
 </li>
       <li>
     module
@@ -373,7 +429,17 @@
 <h2 id="N">N</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="autoapi/data_management/generate_atomicinfo/index.html#data_management.generate_atomicinfo.AtomicData.name">name (data_management.generate_atomicinfo.AtomicData attribute)</a>
+
+      <ul>
+        <li><a href="autoapi/data_management/generate_elec_configs/index.html#data_management.generate_elec_configs.AtomicData.name">(data_management.generate_elec_configs.AtomicData attribute)</a>
+</li>
+      </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="autoapi/data_management/generate_elec_configs/index.html#data_management.generate_elec_configs.NMAX">NMAX (in module data_management.generate_elec_configs)</a>
+</li>
+      <li><a href="autoapi/data_management/generate_basis/index.html#data_management.generate_basis.Shell.number_format">number_format (data_management.generate_basis.Shell attribute)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -417,22 +483,32 @@
 </li>
       <li><a href="autoapi/data_management/scrape_bse/index.html#data_management.scrape_bse.BSEBasisSetScraper.set_default_format">set_default_format() (data_management.scrape_bse.BSEBasisSetScraper method)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="autoapi/data_management/scrape_bse/index.html#data_management.scrape_bse.BSEBasisSetScraper.set_header">set_header() (data_management.scrape_bse.BSEBasisSetScraper method)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="autoapi/data_management/generate_basis/index.html#data_management.generate_basis.Shell">Shell (class in data_management.generate_basis)</a>
 </li>
+      <li><a href="autoapi/data_management/generate_basis/index.html#data_management.generate_basis.Shell.shelltype">shelltype (data_management.generate_basis.Shell attribute)</a>
+</li>
+      <li><a href="autoapi/data_management/generate_atomicinfo/index.html#data_management.generate_atomicinfo.AtomicData.sym">sym (data_management.generate_atomicinfo.AtomicData attribute)</a>
+
+      <ul>
+        <li><a href="autoapi/data_management/generate_elec_configs/index.html#data_management.generate_elec_configs.AtomicData.sym">(data_management.generate_elec_configs.AtomicData attribute)</a>
+</li>
+      </ul></li>
   </ul></td>
 </tr></table>
 
 <h2 id="V">V</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="autoapi/data_management/scrape_bse/index.html#data_management.scrape_bse.BSEBasisSetScraper.validate_basis_set_name">validate_basis_set_name() (data_management.scrape_bse.BSEBasisSetScraper method)</a>
+      <li><a href="autoapi/data_management/scrape_bse/index.html#data_management.scrape_bse.BSEBasisSetScraper.valid_formats">valid_formats (data_management.scrape_bse.BSEBasisSetScraper attribute)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="autoapi/data_management/scrape_bse/index.html#data_management.scrape_bse.BSEBasisSetScraper.validate_basis_set_name">validate_basis_set_name() (data_management.scrape_bse.BSEBasisSetScraper method)</a>
+</li>
       <li><a href="autoapi/data_management/scrape_bse/index.html#data_management.scrape_bse.BSEBasisSetScraper.validate_format_name">validate_format_name() (data_management.scrape_bse.BSEBasisSetScraper method)</a>
 </li>
   </ul></td>
@@ -443,6 +519,18 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="autoapi/data_management/helper_fxns/index.html#data_management.helper_fxns.write_warning">write_warning() (in module data_management.helper_fxns)</a>
 </li>
+  </ul></td>
+</tr></table>
+
+<h2 id="Z">Z</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="autoapi/data_management/generate_atomicinfo/index.html#data_management.generate_atomicinfo.AtomicData.Z">Z (data_management.generate_atomicinfo.AtomicData attribute)</a>
+
+      <ul>
+        <li><a href="autoapi/data_management/generate_elec_configs/index.html#data_management.generate_elec_configs.AtomicData.Z">(data_management.generate_elec_configs.AtomicData attribute)</a>
+</li>
+      </ul></li>
   </ul></td>
 </tr></table>
 
