--- a/genindex.html
+++ b/genindex.html
@@ -1,3 +1,5 @@
+
+
 <!DOCTYPE html>
 <html class="writer-html5" lang="en" data-content_root="./">
 <head>
@@ -5,19 +7,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Index &mdash; ChemCache 1.0.0 documentation</title>
       <link rel="stylesheet" type="text/css" href="_static/pygments.css?v=fa44fd50" />
-      <link rel="stylesheet" type="text/css" href="_static/css/theme.css?v=19f00094" />
-      <link rel="stylesheet" type="text/css" href="_static/graphviz.css?v=fd3f3429" />
+      <link rel="stylesheet" type="text/css" href="_static/css/theme.css?v=e59714d7" />
+      <link rel="stylesheet" type="text/css" href="_static/graphviz.css?v=4ae1632d" />
 
   
-  <!--[if lt IE 9]>
-    <script src="_static/js/html5shiv.min.js"></script>
-  <![endif]-->
-  
-        <script src="_static/jquery.js?v=5d32c60e"></script>
-        <script src="_static/_sphinx_javascript_frameworks_compat.js?v=2cd50e6c"></script>
-        <script src="_static/documentation_options.js?v=8d563738"></script>
-        <script src="_static/doctools.js?v=9a2dae69"></script>
-        <script src="_static/sphinx_highlight.js?v=dc90522c"></script>
+      <script src="_static/jquery.js?v=5d32c60e"></script>
+      <script src="_static/_sphinx_javascript_frameworks_compat.js?v=2cd50e6c"></script>
+      <script src="_static/documentation_options.js?v=8d563738"></script>
+      <script src="_static/doctools.js?v=9bcbadda"></script>
+      <script src="_static/sphinx_highlight.js?v=dc90522c"></script>
     <script src="_static/js/theme.js"></script>
     <link rel="index" title="Index" href="#" />
     <link rel="search" title="Search" href="search.html" /> 
@@ -34,9 +32,6 @@
           <a href="index.html" class="icon icon-home">
             ChemCache
           </a>
-              <div class="version">
-                1.0.0
-              </div>
 <div role="search">
   <form id="rtd-search-form" class="wy-form" action="search.html" method="get">
     <input type="text" name="q" placeholder="Search docs" aria-label="Search docs" />
@@ -132,11 +127,13 @@
 </li>
       <li><a href="autoapi/data_management/generate_densities/index.html#data_management.generate_densities._parse_densities_xml">_parse_densities_xml() (in module data_management.generate_densities)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="autoapi/data_management/generate_molecules/index.html#data_management.generate_molecules._parse_molecules">_parse_molecules() (in module data_management.generate_molecules)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="autoapi/data_management/generate_molecules/index.html#data_management.generate_molecules._parse_molecules_xyz">_parse_molecules_xyz() (in module data_management.generate_molecules)</a>
+</li>
+      <li><a href="autoapi/data_management/generate_basis/index.html#data_management.generate_basis._write_atomic_basis">_write_atomic_basis() (in module data_management.generate_basis)</a>
 </li>
       <li><a href="autoapi/data_management/generate_atomicinfo/index.html#data_management.generate_atomicinfo._write_atoms_average">_write_atoms_average() (in module data_management.generate_atomicinfo)</a>
 </li>
