deploy: a4498af9dffcd279b4e5328a5478ec6584359df0

--- a/autoapi/data_management/scrape_bse/index.html
+++ b/autoapi/data_management/scrape_bse/index.html
@@ -114,7 +114,8 @@ Set Exchange (BSE) in the specified output format.</p>
   <span class="o">-</span><span class="n">o</span> <span class="n">OUTFORMAT</span><span class="p">,</span> <span class="o">--</span><span class="n">outformat</span> <span class="n">OUTFORMAT</span>
                         <span class="n">Output</span> <span class="nb">format</span><span class="o">.</span> <span class="p">(</span><span class="n">Default</span><span class="p">:</span> <span class="n">NWChem</span><span class="p">)</span>
   <span class="o">-</span><span class="n">g</span><span class="p">,</span> <span class="o">--</span><span class="n">optimize_general</span>
-                        <span class="n">Toggle</span> <span class="n">on</span> <span class="n">optimizing</span> <span class="n">general</span> <span class="n">contractions</span><span class="o">.</span> <span class="n">Default</span> <span class="n">OFF</span><span class="o">.</span>
+                        <span class="n">Toggle</span> <span class="n">on</span> <span class="n">optimizing</span> <span class="n">general</span> <span class="n">contractions</span><span class="o">.</span>
+                        <span class="p">(</span><span class="n">Default</span><span class="p">:</span> <span class="n">OFF</span><span class="p">)</span>
 </pre></div>
 </div>
 <p>This script creates the following files in the given destination:</p>
